// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VariableEditor > renders correctly with empty variables 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div>
      <div>
        <button
          aria-expanded="true"
          class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
          style="justify-content: flex-start; width: 100%;"
          type="button"
        >
          <span
            class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
                fill="currentColor"
              />
            </svg>
          </span>
          New Variable
        </button>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="name0"
            title="name"
          >
            name
            <span
              aria-label="Required"
              class="msla-label-required-parameter-right"
            >
              *
            </span>
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            id="msla-tokenpicker-callout-location3"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message4"
              aria-labelledby="name - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="name - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter variable name"
            >
              <p
                class="editor-paragraph"
              >
                <br />
              </p>
            </div>
            <span
              class="editor-placeholder"
            >
              Enter variable name
            </span>
            <span
              hidden=""
              id="msla-described-by-message4"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="type1"
            title="type"
          >
            type
            <span
              aria-label="Required"
              class="msla-label-required-parameter-right"
            >
              *
            </span>
          </label>
        </div>
        <div
          class="msla-dropdown-editor-container"
        >
          <div
            class="ms-Dropdown-container root-185"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-186"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown5"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-187"
                id="Dropdown5-option"
              >
                Select variable type
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-188"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-206"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="value2"
            title="value"
          >
            value
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            id="msla-tokenpicker-callout-location6"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message7"
              aria-labelledby="value - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="value - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter initial value"
            >
              <p
                class="editor-paragraph"
              >
                <br />
              </p>
            </div>
            <span
              class="editor-placeholder"
            >
              Enter initial value
            </span>
            <span
              hidden=""
              id="msla-described-by-message7"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="msla-variable-editor-edit-or-delete-button"
    >
      <button
        aria-label="Delete"
        class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9a.75.75 0 0 0-.75.75v7.5a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9c.41 0 .75.34.75.75v7.5a.75.75 0 0 1-1.5 0v-7.5c0-.41.34-.75.75-.75Zm-7.52 9.47a2.25 2.25 0 0 0 2.24 2.03h6.06c1.15 0 2.12-.88 2.24-2.03L18.42 6.5H5.58l1.15 11.97Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div>
      <div>
        <button
          aria-expanded="true"
          class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
          style="justify-content: flex-start; width: 100%;"
          type="button"
        >
          <span
            class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
                fill="currentColor"
              />
            </svg>
          </span>
          testVariable
        </button>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="name8"
            title="name"
          >
            name
            <span
              aria-label="Required"
              class="msla-label-required-parameter-right"
            >
              *
            </span>
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            id="msla-tokenpicker-callout-location11"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message12"
              aria-labelledby="name - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="name - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter variable name"
            >
              <p
                class="editor-paragraph ltr"
                dir="ltr"
              >
                <span
                  data-lexical-text="true"
                >
                  testVariable
                </span>
              </p>
            </div>
            <span
              hidden=""
              id="msla-described-by-message12"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="type9"
            title="type"
          >
            type
            <span
              aria-label="Required"
              class="msla-label-required-parameter-right"
            >
              *
            </span>
          </label>
        </div>
        <div
          class="msla-dropdown-editor-container"
        >
          <div
            class="ms-Dropdown-container root-185"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-186"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown13"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-207"
                id="Dropdown13-option"
              >
                Boolean
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-188"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-206"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="value10"
            title="value"
          >
            value
          </label>
        </div>
        <div
          class="msla-combobox-container"
        >
          <div
            class="msla-combobox-editor-container"
          >
            <div
              style="width: 100%;"
            >
              <div
                class="msla-combobox-editor"
                id="msla-tokenpicker-callout-location14"
                style="position: relative;"
              >
                <div
                  aria-describedby="msla-described-by-message15"
                  aria-labelledby="value - 0"
                  class="editor-input"
                  contenteditable="true"
                  data-lexical-editor="true"
                  data-testid="value - 0 contenteditable"
                  role="textbox"
                  spellcheck="false"
                  style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
                  tabindex="0"
                  title="Enter initial value"
                >
                  <p
                    class="editor-paragraph ltr"
                    dir="ltr"
                  >
                    <span
                      data-lexical-text="true"
                    >
                      testValue
                    </span>
                  </p>
                </div>
                <span
                  hidden=""
                  id="msla-described-by-message15"
                >
                  Add dynamic data or expressions by inserting a /
                </span>
              </div>
            </div>
            <button
              aria-label="Clear custom value"
              class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
              style="height: 26px; width: 26px; margin: 2px; position: absolute; right: 0px;"
              type="button"
            >
              <span
                class="fui-Button__icon rywnvv2"
              >
                <svg
                  aria-hidden="true"
                  class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.21 4.39.08-.1a1 1 0 0 1 1.32-.08l.1.08L12 10.6l6.3-6.3a1 1 0 1 1 1.4 1.42L13.42 12l6.3 6.3a1 1 0 0 1 .08 1.31l-.08.1a1 1 0 0 1-1.32.08l-.1-.08L12 13.4l-6.3 6.3a1 1 0 0 1-1.4-1.42L10.58 12l-6.3-6.3a1 1 0 0 1-.08-1.31l.08-.1-.08.1Z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.4 4.55.07-.08a.75.75 0 0 1 .98-.07l.08.07L12 10.94l6.47-6.47a.75.75 0 1 1 1.06 1.06L13.06 12l6.47 6.47c.27.27.3.68.07.98l-.07.08a.75.75 0 0 1-.98.07l-.08-.07L12 13.06l-6.47 6.47a.75.75 0 0 1-1.06-1.06L10.94 12 4.47 5.53a.75.75 0 0 1-.07-.98l.07-.08-.07.08Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="msla-variable-editor-edit-or-delete-button"
    >
      <button
        aria-label="Delete"
        class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9a.75.75 0 0 0-.75.75v7.5a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9c.41 0 .75.34.75.75v7.5a.75.75 0 0 1-1.5 0v-7.5c0-.41.34-.75.75-.75Zm-7.52 9.47a2.25 2.25 0 0 0 2.24 2.03h6.06c1.15 0 2.12-.88 2.24-2.03L18.42 6.5H5.58l1.15 11.97Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable with Token 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div>
      <div>
        <button
          aria-expanded="true"
          class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
          style="justify-content: flex-start; width: 100%;"
          type="button"
        >
          <span
            class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
          >
            <svg
              aria-hidden="true"
              class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
                fill="currentColor"
              />
            </svg>
          </span>
          testVariable
        </button>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="name16"
            title="name"
          >
            name
            <span
              aria-label="Required"
              class="msla-label-required-parameter-right"
            >
              *
            </span>
          </label>
        </div>
        <div
          style="width: 100%;"
        >
          <div
            class="msla-setting-token-editor-container"
            id="msla-tokenpicker-callout-location19"
            style="position: relative;"
          >
            <div
              aria-describedby="msla-described-by-message20"
              aria-labelledby="name - 0"
              class="editor-input"
              contenteditable="true"
              data-lexical-editor="true"
              data-testid="name - 0 contenteditable"
              role="textbox"
              spellcheck="false"
              style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
              tabindex="0"
              title="Enter variable name"
            >
              <p
                class="editor-paragraph ltr"
                dir="ltr"
              >
                <span
                  data-lexical-text="true"
                >
                  testVariable
                </span>
              </p>
            </div>
            <span
              hidden=""
              id="msla-described-by-message20"
            >
              Add dynamic data or expressions by inserting a /
            </span>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="type17"
            title="type"
          >
            type
            <span
              aria-label="Required"
              class="msla-label-required-parameter-right"
            >
              *
            </span>
          </label>
        </div>
        <div
          class="msla-dropdown-editor-container"
        >
          <div
            class="ms-Dropdown-container root-185"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-186"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown21"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-207"
                id="Dropdown21-option"
              >
                Boolean
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-188"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-206"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="msla-input-parameter-field"
      >
        <div
          class="msla-input-parameter-label"
        >
          <label
            class="ms-Label msla-label root-184"
            id="value18"
            title="value"
          >
            value
          </label>
        </div>
        <div
          class="msla-combobox-container"
        >
          <div
            class="msla-combobox-editor-container"
          >
            <div
              style="width: 100%;"
            >
              <div
                class="msla-combobox-editor"
                id="msla-tokenpicker-callout-location22"
                style="position: relative;"
              >
                <div
                  aria-describedby="msla-described-by-message23"
                  aria-labelledby="value - 0"
                  class="editor-input"
                  contenteditable="true"
                  data-lexical-editor="true"
                  data-testid="value - 0 contenteditable"
                  role="textbox"
                  spellcheck="false"
                  style="padding-inline-end: 32px; user-select: text; white-space: pre-wrap; word-break: break-word;"
                  tabindex="0"
                  title="Enter initial value"
                />
                <span
                  class="editor-placeholder"
                >
                  Enter initial value
                </span>
                <span
                  hidden=""
                  id="msla-described-by-message23"
                >
                  Add dynamic data or expressions by inserting a /
                </span>
              </div>
            </div>
            <button
              aria-label="Clear custom value"
              class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
              style="height: 26px; width: 26px; margin: 2px; position: absolute; right: 0px;"
              type="button"
            >
              <span
                class="fui-Button__icon rywnvv2"
              >
                <svg
                  aria-hidden="true"
                  class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.21 4.39.08-.1a1 1 0 0 1 1.32-.08l.1.08L12 10.6l6.3-6.3a1 1 0 1 1 1.4 1.42L13.42 12l6.3 6.3a1 1 0 0 1 .08 1.31l-.08.1a1 1 0 0 1-1.32.08l-.1-.08L12 13.4l-6.3 6.3a1 1 0 0 1-1.4-1.42L10.58 12l-6.3-6.3a1 1 0 0 1-.08-1.31l.08-.1-.08.1Z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m4.4 4.55.07-.08a.75.75 0 0 1 .98-.07l.08.07L12 10.94l6.47-6.47a.75.75 0 1 1 1.06 1.06L13.06 12l6.47 6.47c.27.27.3.68.07.98l-.07.08a.75.75 0 0 1-.98.07l-.08-.07L12 13.06l-6.47 6.47a.75.75 0 0 1-1.06-1.06L10.94 12 4.47 5.53a.75.75 0 0 1-.07-.98l.07-.08-.07.08Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="msla-variable-editor-edit-or-delete-button"
    >
      <button
        aria-label="Delete"
        class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9a.75.75 0 0 0-.75.75v7.5a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9c.41 0 .75.34.75.75v7.5a.75.75 0 0 1-1.5 0v-7.5c0-.41.34-.75.75-.75Zm-7.52 9.47a2.25 2.25 0 0 0 2.24 2.03h6.06c1.15 0 2.12-.88 2.24-2.03L18.42 6.5H5.58l1.15 11.97Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
